--- a/index.html
+++ b/index.html
@@ -4,120 +4,215 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сучасна пекарня</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- Fonts -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;900&family=Roboto&display=swap"
       rel="stylesheet"
-    />
+    /> -->
+    <!-- Styles -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <a href="#">
-          <img src="./img/logo.svg" alt="логотип">
-        </a>
-        <ul>
-          <li><a href="#">Наші традиції</a></li>
-          <li><a href="#">Шеф-кухарі</a></li>
-          <li><a href="#">Формати</a></li>
-          <li><a href="#">Контакти</a></li>
-        </ul>
-      </nav>
-      <button type="button">Замовити дзвінок</button>
+      <div class="container">
+        <div class="header-container">
+          <nav class="header-nav">
+            <a href="/">
+              <img src="./img/logo.svg" alt="логотип" />
+            </a>
+            <ul class="header-menu">
+              <li>
+                <a class="link" href="#traditions-section">Наші традиції</a>
+              </li>
+              <li>
+                <a class="link" href="#chefs-section">Шеф-кухарі</a>
+              </li>
+              <li>
+                <a class="link" href="#formats-section">Формати</a>
+              </li>
+              <li>
+                <a class="link" href="#contact-section">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+          <button class="button" type="button">Замовити дзвінок</button>
+        </div>
+      </div>
     </header>
     <main>
       <!-- майже все крім хедеру і футера -->
-      <section>
-        <h1>Сучасна пекарня</h1>
+      <section class="hero-section">
+        <div class="container">
+          <h1 class="hero-title">
+            <span class="accent">Сучасна</span> пекарня
+          </h1>
+        </div>
       </section>
-      <section>
-        <ul>
-          <li>Великий попит на ринку</li>
-          <li>Доступні за бюджетом формати</li>
-          <li>Досвідчена управлінська команда</li>
-        </ul>
-        <h2>Новий формат традицій</h2>
-        <p>
-          <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
-          зберегла смак традиційної випічки та натуральність інгредієнтів.
-        </p>
-        <p>
-          Ми працюємо як найвідоміші мережі —
-          <span>5 хвилин і замовлення готове</span>. А ще у наших пекарень
-          стильний дизайн та висока якість обслуговування!
-        </p>
-        <img src="./img/baker-man.jpg" alt="чоловік пекар дивиться на батони">
+      <section class="advantages-section">
+        <div class="container">
+          <h2 class="visually-hidden">Наші переваг и</h2>
+          <ul class="advantages-list">
+            <li class="advantages-item">Великий попит на ринку</li>
+            <li class="advantages-item">Доступні за бюджетом формати</li>
+            <li class="advantages-item">Досвідчена управлінська команда</li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2>Наші найкращі шеф -кухарі</h2>
-        <ul>
-          <li>
-            <article>
-              <h3>Настя</h3>
-              <p>Привіт, я Настя!</p>
-              <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
-              <p>Я випічу для вас найсмачніщі вироби!</p>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3>Влад</h3>
-              <p>Привіт, я Влад!</p>
-              <p>
-                Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша любов, з
-                якою ми ділимось кожен раз з Вами через нашу випічку!
+      <section class="traditions-section section" id="traditions-section">
+        <div class="container">
+          <div class="traditions-container">
+            <div class="traditions-content">
+              <h2 class="traditions-title section-title">
+                Новий формат традицій
+              </h2>
+              <p class="traditions-text">
+                <span class="brand uppercase">shop bakery</span> — це пекарня,
+                яка взяла все найкраще, і зберегла смак традиційної випічки та
+                натуральність інгредієнтів.
               </p>
-              <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
-            </article>
-          </li>
-        </ul>
+              <p class="traditions-text limited">
+                Ми працюємо як найвідоміші мережі —
+                <span class="brand">5 хвилин і замовлення готове</span>. А ще у
+                наших пекарень стильний дизайн та висока якість обслуговування!
+              </p>
+            </div>
+            <img
+              src="./img/baker-man.jpg"
+              alt="чоловік пекар дивиться на батони"
+            />
+          </div>
+        </div>
       </section>
-      <section>
-        <h2 lang="en">Формати</h2>
-        <li>
-          <article>
-            <h3 lang="en">Walrus</h3>
-          </article>
-        </li>
-        <li>
-          <article>
-          <h3 lang="en">Horseshoe</h3>
-        </article>
-        </li>
-       <li>
-         <article>
-          <h3>Handlebar</h3>
-        </article>  
-       </li>
+      <section class="section" id="chefs-section">
+        <div class="container">
+          <h2 class="chefs-title section-title centered">
+            Наші найкращі <span class="accent">шеф-кухарі</span>
+          </h2>
+          <ul>
+            <li>
+              <article>
+                <img class="chef-photo" src="./img/nastia-chef.jpg" alt="nastia chef">
+                <h3 class="chef-title">Настя</h3>
+                <p>Привіт, я Настя!</p>
+                <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
+                <p>Я випічу для вас найсмачніщі вироби!</p>
+              </article>
+            </li>
+            <li>
+              <article>
+                <img class="chef-photo" src="./img/vlad-chef.jpg" alt="vlad chef">
+                <h3 class="chef-title">Влад</h3>
+                <p>Привіт, я Влад!</p>
+                <p>
+                  Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша
+                  любов, з якою ми ділимось кожен раз з Вами через нашу випічку!
+                </p>
+                <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+              </article>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2>Приєднуйся до мережі пекарень</h2>
+      <section class="section" id="formats-section">
+        <div class="container">
+          <h2 class="formats-title section-title centered">Формати</h2>
+          <ul class="format-list"> 
+            <li class="formats-item">
+              <article class="format-card">
+                <h3 class="format-title" lang="en">Walrus</h3>
+                <div class="format-text">
+                  <p>Площа: до 120 м2</p>
+                  <p>Меню: розширене меню</p>
+                  <p>
+                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                    офіціанти-різнороби
+                  </p>
+                  <p>Посадкові місця: є</p>
+                </div>
+              </article>
+            </li>
+            <li class="formats-item">
+              <article class="format-card">
+                <h3 class="format-title" lang="en">Horseshoe</h3>
+                <div class="format-text">
+                  <p>Площа: до 120 м2</p>
+                  <p>Меню: розширене меню</p>
+                  <p>
+                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                    офіціанти-різнороби
+                  </p>
+                  <p>Посадкові місця: є</p>
+                </div>
+              </article>
+            </li class="formats-item">
+            <li>
+              <article class="format-card">
+                <h3 class="format-title" lang="en">Handlebar</h3>
+                <div class="format-text">
+                  <p>Площа: до 120 м2</p>
+                  <p>Меню: розширене меню</p>
+                  <p>
+                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                    офіціанти-різнороби
+                  </p>
+                  <p>Посадкові місця: є</p>
+                </div>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section" id="contact-section">
+        <div class="container">
+          <h2 class="contact-title section title">
+            Приєднуйся до мережі пекарень
+          </h2>
+          <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1638712576982!2d30.488658576961026!3d50.456673086915146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1704721117760!5m2!1suk!2sua"
+            width="603"
+            height="595"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
       </section>
     </main>
-    <footer>
-      <nav>
-      <a href="#">
-        <img src="./img/logo.svg" alt="логотип">
-      </a>
-      <ul>
-          <li><a href="#">Наші традиції</a></li>
-          <li><a href="#">Шеф-кухарі</a></li>
-          <li><a href="#">Формати</a></li>
-          <li><a href="#">Контакти</a></li>
-        </ul>
+    <footer class="footer">
+      <div class="container">
+        <nav>
+          <a href="#">
+            <img src="./img/logo.svg" alt="логотип" />
+          </a>
+          <ul>
+            <li><a class="link" href="#">Наші традиції</a></li>
+            <li><a class="link" href="#">Шеф-кухарі</a></li>
+            <li><a class="link" href="#">Формати</a></li>
+            <li><a class="link" href="#">Контакти</a></li>
+          </ul>
         </nav>
         <address>
           <ul>
             <li>
-              <a href="tel:+380960000007">+ 38 (096) 000 00 07</a>
+              <a class="address-link" href="tel:+380960000007"
+                >+ 38 (096) 000 00 07</a
+              >
             </li>
             <li>
-              <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+              <a class="address-link" href="mailto:shopbakery@gmail.com"
+                >shopbakery@gmail.com</a
+              >
             </li>
             <li>
-              <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d635.0433432391872!2d30.490766099610145!3d50.45649614276386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf528c8ab9d7%3A0xbd33cf2777e7d2d!2z0J_QvtGB0L7Qu9GM0YHRgtCy0L4g0KHQqNCQ!5e0!3m2!1sru!2sua!4v1703112207521!5m2!1sru!2sua" target="_blank">
+              <a
+                class="address-link"
+                href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d635.0433432391872!2d30.490766099610145!3d50.45649614276386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf528c8ab9d7%3A0xbd33cf2777e7d2d!2z0J_QvtGB0L7Qu9GM0YHRgtCy0L4g0KHQqNCQ!5e0!3m2!1sru!2sua!4v1703112207521!5m2!1sru!2sua"
+                target="_blank"
+              >
                 Україна, м. Київ, вул. Січових Стрільців 54
               </a>
             </li>
@@ -130,9 +225,12 @@
               <!-- instagram -->
             </li>
           </ul>
-          <a href="#" target="_blank">Політика конфіденційності</a>
-          <p>© 2022 Дані захищені</p>
+          <a class="address-link" href="#" target="_blank"
+            >Політика конфіденційності</a
+          >
+          <p class="address-copyright">&copy; 2022 Дані захищені</p>
         </address>
+      </div>
     </footer>
   </body>
 </html>
